fixed word wrapping shenanigans

--- a/crudstyle.css
+++ b/crudstyle.css
@@ -42,7 +42,7 @@ form{
 div{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 3ex 3ex 2.5fr 5ex;
+    grid-template-rows: 0.2fr 3ex 2.5fr 5ex;
     grid-template-areas: 
     "title title"
     "time time"
@@ -56,7 +56,9 @@ div{
 }
 
 h3{
+    max-width: 95%;
     grid-area: title;
+    overflow-wrap:break-word;
     margin: 2px;
 }
 
@@ -67,6 +69,8 @@ time{
 
 p{
     grid-area: summary;
+    max-width: 95%;
+    overflow-wrap:break-word;
 }
 
 .edit_btn{
